package app;

public class HomePage {
    public HomePage() {}

    public void editTraining() {}
    public void displayTrainingHistory() {}
}