package app;

import JFrame.jFrameGUI;

public class main{
   public static void main(String[] args) {
       jFrameGUI jFrameGUI = new jFrameGUI();
       jFrameGUI.launchGUI();
    }
}
